--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint:fix": "eslint . --fix",
     "postinstall": "npm run cf-typegen",
     "preview": "npm run build && vite preview",
+    "test": "vitest run",
     "test:e2e": "playwright test --reporter line",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:debug": "playwright test --debug",
@@ -27,7 +28,8 @@
     "isbot": "^5.1.27",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router": "^7.5.3"
+    "react-router": "^7.5.3",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@axe-core/playwright": "^4.10.2",
@@ -45,6 +47,7 @@
     "typescript": "^5.9.3",
     "vite": "^6.3.3",
     "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^2.1.6",
     "wrangler": "^4.19.1"
   }
 }
