--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
   "dependencies": {
     "@epic-web/config": "^1.21.0",
     "@react-router/fs-routes": "^7.9.3",
+    "chart.js": "^4.5.0",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "date-fns": "^4.1.0",
     "isbot": "^5.1.27",
     "react": "^19.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.2.0",
     "react-router": "^7.5.3",
     "remix-utils": "^9.0.0",
