feat: update project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "freedom-seed",
+  "name": "glitchassassin-tools",
   "private": true,
   "type": "module",
   "prettier": "@epic-web/config/prettier",
