--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "dependencies": {
     "@epic-web/config": "^1.21.0",
-    "@react-router/fs-routes": "^7.9.3",
+    "@react-router/fs-routes": "^7.9.4",
+    "@react-router/remix-routes-option-adapter": "^7.9.4",
     "chart.js": "^4.5.0",
     "chartjs-adapter-date-fns": "^3.0.0",
     "date-fns": "^4.1.0",
@@ -32,7 +33,7 @@
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.2.0",
-    "react-router": "^7.5.3",
+    "react-router": "^7.9.4",
     "remix-utils": "^9.0.0",
     "zod": "^4.1.12"
   },
@@ -40,7 +41,7 @@
     "@axe-core/playwright": "^4.10.2",
     "@cloudflare/vite-plugin": "^1.13.10",
     "@playwright/test": "^1.55.1",
-    "@react-router/dev": "^7.5.3",
+    "@react-router/dev": "^7.9.4",
     "@tailwindcss/vite": "^4.1.4",
     "@types/node": "^22",
     "@types/react": "^19.2.0",
@@ -48,6 +49,7 @@
     "eslint": "^9.37.0",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.12",
+    "remix-flat-routes": "^0.8.5",
     "tailwindcss": "^4.1.4",
     "typescript": "^5.9.3",
     "vite": "^6.3.3",
