--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,10 +106,9 @@ jobs:
   deploy-production:
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    if: false
-    # if:
-    #   github.event_name == 'push' && (github.ref == 'refs/heads/main' ||
-    #   github.ref == 'refs/heads/master')
+    if:
+      github.event_name == 'push' && (github.ref == 'refs/heads/main' ||
+      github.ref == 'refs/heads/master')
     needs: [ci, playwright]
 
     steps:
