--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "better-sqlite3": "^12.5.0",
     "drizzle-kit": "^0.31.8",
     "eslint": "^9.37.0",
+    "eslint-plugin-unused-imports": "^4.3.0",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.12",
     "remix-flat-routes": "^0.8.5",
