--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "typecheck": "npm run cf-typegen && react-router typegen && tsc -b",
     "db:makemigrations": "npx drizzle-kit generate",
     "db:migrate": "npx wrangler d1 migrations apply tools-db --local",
-    "db:migrate:remote": "npx wrangler d1 migrations apply tools-db"
+    "db:migrate:remote": "npx wrangler d1 migrations apply tools-db --remote"
   },
   "dependencies": {
     "@epic-web/config": "^1.21.0",
@@ -39,6 +39,7 @@
     "react-dom": "^19.2.0",
     "react-router": "^7.9.4",
     "remix-utils": "^9.0.0",
+    "tiny-invariant": "^1.3.3",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -48,7 +49,7 @@
     "@react-router/dev": "^7.9.4",
     "@tailwindcss/vite": "^4.1.4",
     "@types/better-sqlite3": "^7.6.13",
-    "@types/node": "^22",
+    "@types/node": "^22.19.3",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "better-sqlite3": "^12.5.0",
